--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -19,7 +21,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCWqKLu6yh6NtgJQNrqw3s7PVCvy_2vgPw"/>
+            android:value="AIzaSyCWqKLu6yh6NtgJQNrqw3s7PVCvy_2vgPw" />
 
         <activity android:name=".MapViewActivity"></activity>
         <activity android:name=".MainActivity">
